Projet GL/Projet_GL/src/test/deca/context/valid/increment2/bool-not.deca
// Test not bool

// Historique : cree le 10/01/2023

{
    boolean a = ! true;
    boolean b = !false;

    a = !b;
}