Projet GL/Projet_GL/src/test/deca/context/invalid/increment7/cast-bool-to-float.deca
//Rule : 3.39

//Resultats : can't cast a boolean into a float

// Historique : cree le 09/01/2023


{
    float a;
    boolean b = true;

    //Must be refused
    a = (float) b;
}